CICO-4888: Fixed thankyou msg on mobile.

--- a/guestweb/css/less/snt.less
+++ b/guestweb/css/less/snt.less
@@ -1197,6 +1197,29 @@ padding:5px 8px 2px 0;
 
 
 /* ----------------------- execusive styling for desktops and tablets portrait mode -------------------*/
+.checkout-status {
+  font-family: 'Source Sans Pro';
+  padding: 10px 0 20px;
+}
+
+.checkout-status .msg-head {
+  font-weight: 300;
+  font-size: 25px !important;
+  padding: 0 5% 0;
+}
+
+.checkout-status .msg-body {
+  font-weight: 300;
+  font-size: 20px !important;
+  padding: 15px 30% 0;
+}
+
+.checkout-status .msg-foot {
+  font-weight: 400;
+  font-size: 25px !important;
+  padding: 15px 5% 0;
+}
+
 .with-back-btn {
   overflow: hidden;
   img {
@@ -1439,19 +1462,16 @@ body > div[ng-view] {
   }
 
   .checkout-status .msg-head {
-    font-weight: 300;
     font-size: 35px !important;
     padding: 0 5% 0;
   }
 
   .checkout-status .msg-body {
-    font-weight: 300;
     font-size: 25px !important;
     padding: 30px 30% 0;
   }
 
   .checkout-status .msg-foot {
-    font-weight: 400;
     font-size: 35px !important;
     padding: 55px 5% 0;
   }
